--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
         <h1>Hello world</h1>
 
         <div id="app">
-            <p>{{ title }}  - {{ author }} - {{ age }}</p>
+            <div v-if="showBooks">
+                <p>{{ title }}  - {{ author }} - {{ age }}</p>
+            </div>
+            
+            <button @click="toggleShowBooks">
+                <span v-if="showBooks">hide books</span>
+                <span v-else>show books</span>
+            </button>
 
-            <button v-on:click="age++">Increase age</button>
-            <button v-on:click="age--">Decrease age</button>
-            <div @click="changeTitle('Oathbringer')">Change book title</div>
+            <div v-show="showBooks">
+                currently showing books
+            </div>
         </div>
         <script src="app.js"></script>
     </body>
