--- a/index.html
+++ b/index.html
@@ -5,13 +5,35 @@
         <title>Learning Vue</title>
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <style>
-            .box {
-                padding: 100px 0;
-                width: 400px;
-                text-align: center;
-                background: #ddd;
-                margin: 20px;
-                display: inline-block;
+            body {
+                background: #eee;
+                max-width: 960px;
+                margin: 20px auto;
+            }
+
+            p, h3, ul {
+                margin: 0;
+                padding: 0;
+            }
+
+            li {
+                list-style-type: none;
+                background: #fff;
+                margin: 20px auto;
+                padding: 10px 20px;
+                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+
+            img {
+                width: 100px;
+            }
+
+            li.fav {
+                background: #ff9ed2;
+                color: white;
             }
         </style>
     </head>
@@ -19,8 +41,15 @@
         <h1>Hello world</h1>
 
         <div id="app">
+            <a :href="url">google!</a>
             <div v-if="showBooks">
-                <p>{{ title }}  - {{ author }} - {{ age }}</p>
+                <ul>
+                    <li v-for="book in books" :class="{ fav: book.isFav }">
+                        <img :src="book.img" :alt="book.title">
+                        <h3>{{ book.title }}</h3>
+                        <p> {{ book.author }} </p>
+                    </li>
+                </ul>
             </div>
             
             <button @click="toggleShowBooks">
@@ -29,11 +58,6 @@
             </button>
 
             <br>
-
-            <div class="box" @mouseover="handleEvent($event)">mouseover (enter)</div>
-            <div class="box" @mouseleave="handleEvent">mouseleave</div>
-            <div class="box" @dblclick="handleEvent">double click</div>
-            <div class="box" @mousemove="handleMouseMove">position: {{ x }}  {{ y }} </div>
         </div>
         <script src="app.js"></script>
     </body>
