--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a :href="url">google!</a>
             <div v-if="showBooks">
                 <ul>
-                    <li v-for="book in books" :class="{ fav: book.isFav }">
+                    <li @click="toggleFav(book)" v-for="book in books" :class="{ fav: book.isFav }">
                         <img :src="book.img" :alt="book.title">
                         <h3>{{ book.title }}</h3>
                         <p> {{ book.author }} </p>
